--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,6 +41,19 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
+
+            <!-- Displaying the alert flash messages above the blog posts -->
+            <!-- 'with_categories' gets the bootstrap alert class -->
+            {% with messages = get_flashed_messages(with_categories = true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class = "alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+
           {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
