--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>About Us</h1>
+    <hr>
+    <article class="media content-section">
+	    <p>
+	    	<strong>Flask Blog</strong> is one of the best platform to share your information and publish blog. Flask Blog is popular in the world wide allowing users to post photos to their blogs. Flask Blog is best free platform to blog-publishing service that allows multi-user blogs. It was developed and launched by Pyra Labs.
+	    	<br><br>
+			Now you know what Flask Blog is. But let me tell you why you should choose Flask Blog as your platform for building a wonderful and professional blog or website. Here are few features of Flask Blog which are definitely going to amaze you.
+		</p>
 {% endblock content %}
