--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-
+    
+    <h2 class="mb-3 article-title">Posts by {{ user.username }} ({{ posts.total }})</h2>
+    <hr>
     <!-- Since we have used the pagination object we have to use posts.items instead of post attribute -->
     {% for post in posts.items %}
         <article class="media content-section">
@@ -22,11 +24,11 @@
         {% for page_num in posts.iter_pages(left_edge = 1, right_edge = 1, left_current = 1, right_current = 2) %}
             {% if page_num %}
                 {% if posts.page == page_num %}
-                    <a class="btn btn-info mb-4" href="{{ url_for('home', page = page_num) }}">
+                    <a class="btn btn-info mb-4" href="{{ url_for('user_posts', username = user.username, page = page_num) }}">
                         {{ page_num }}
                     </a>
                 {% else %}
-                    <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page = page_num) }}">
+                    <a class="btn btn-outline-info mb-4" href="{{ url_for('user_posts', username = user.username, page = page_num) }}">
                         {{ page_num }}
                     </a>
                 {% endif %}    
